Bug 321036 - Devices changed, but not really
Summary: Devices changed, but not really
Status: RESOLVED FIXED
Alias: None
Product: Phonon
Classification: Frameworks and Libraries
Component: kded module for audio device listing (other bugs)
Version First Reported In: 4.6.0
Platform: Debian unstable Linux
: NOR normal
Target Milestone: 4.6.1
Assignee: Harald Sitter
URL:
Keywords:
: 322018 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-06-11 17:42 UTC by Jeffrey
Modified: 2013-07-06 11:33 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Recent popup of PulseAudio device not there (57.29 KB, image/jpeg)
2013-06-16 14:26 UTC, Jeffrey
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jeffrey 2013-06-11 17:42:07 UTC
Sometimes after a reboot, usually due to an update but other times do to laptop moves or desktop power-downs, Phonon pops up to tell me that my hardware has changed and do I want to forget about previous devices?

Nothing has changed, but suddenly Phonon cannot see my hardware and I have to spend too much time going through options trying to get the mixer etc to function.

Reproducible: Sometimes

Steps to Reproduce:
1.  Install updates and reboot
2.  Phonon can't play audio and tells me that the hardware has changed
3.  I insist Phonon is lying to me and eventually get it to work again
Actual Results:  
It never is reproducable on demand, but it happens on almost every single machine I use: two desktops and three laptops all have these "Hardware Has Changed" error messages, so I would imagine others see it also.

Expected Results:  
The hardware hasn't changed, so I would expect Phonon to keep the working settings.

I know this is a very vague bug report, but I see it often (once per month or so, on different machines) and I have to imagine others see these messages as well.  I'd really like Phonon to work, please.

Thanks for KDE.
Comment 1 Myriam Schweingruber 2013-06-11 18:35:09 UTC
Could you please also set the version field?
Comment 2 Jeffrey 2013-06-11 18:39:10 UTC
> Could you please also set the version field?
Set; currently I have Phonon 4.6.0 but this has been a common, on-going issue for a few *years* now, and I don't know the versions in the past.

This isn't uncommon for me, are you really unaware of this happening?
Comment 3 Martin Sandsmark 2013-06-12 09:42:07 UTC
what backend? are you using pulseaudio?
Comment 4 Jeffrey 2013-06-12 13:02:50 UTC
> what backend? are you using pulseaudio?
PulseAudio backend, yes, but I seem to remember this being an issue with
the GStreamer backend as well.


On Wed, Jun 12, 2013 at 4:42 AM, Martin Sandsmark
<martin.sandsmark@kde.org>wrote:

> https://bugs.kde.org/show_bug.cgi?id=321036
>
> --- Comment #3 from Martin Sandsmark <martin.sandsmark@kde.org> ---
> what backend? are you using pulseaudio?
>
> --
> You are receiving this mail because:
> You are on the CC list for the bug.
> You reported the bug.
>
Comment 5 Myriam Schweingruber 2013-06-12 18:19:02 UTC
(In reply to comment #4)
> > what backend? are you using pulseaudio?
> PulseAudio backend, yes, but I seem to remember this being an issue with
> the GStreamer backend as well.

PulseAudio is not a backend, it is an audio framework. There are currently two actively maintained Phonon backends, please test both the gstreamer and the vlc backend.
Comment 6 Jeffrey 2013-06-12 18:30:37 UTC
Shoot, yes, VLC backend is what I meant, and this error has happened with
GStreamer backend, and also with the Xine backend when that existed.  It's
been going on for years but I cannot reproduce it on demand.  As mentioned,
this happens randomly on bootup, often (but not always) after updates.

There is nothing to test at this time, I cannot reproduce the
issue/error/change.  It just happens some times.


On Wed, Jun 12, 2013 at 1:19 PM, Myriam Schweingruber <myriam@kde.org>wrote:

> https://bugs.kde.org/show_bug.cgi?id=321036
>
> --- Comment #5 from Myriam Schweingruber <myriam@kde.org> ---
> (In reply to comment #4)
> > > what backend? are you using pulseaudio?
> > PulseAudio backend, yes, but I seem to remember this being an issue with
> > the GStreamer backend as well.
>
> PulseAudio is not a backend, it is an audio framework. There are currently
> two
> actively maintained Phonon backends, please test both the gstreamer and
> the vlc
> backend.
>
> --
> You are receiving this mail because:
> You are on the CC list for the bug.
> You reported the bug.
>
Comment 7 Martin Sandsmark 2013-06-13 08:45:30 UTC
but are you using PulseAudio?
Comment 8 Jeffrey 2013-06-13 12:20:55 UTC
Yes, using PulseAudio on these various machines.


On Thu, Jun 13, 2013 at 3:45 AM, Martin Sandsmark
<martin.sandsmark@kde.org>wrote:

> https://bugs.kde.org/show_bug.cgi?id=321036
>
> --- Comment #7 from Martin Sandsmark <martin.sandsmark@kde.org> ---
> but are you using PulseAudio?
>
> --
> You are receiving this mail because:
> You are on the CC list for the bug.
> You reported the bug.
>
Comment 9 Jeffrey 2013-06-16 14:26:07 UTC
Created attachment 80554 [details]
Recent popup of PulseAudio device not there

I moved a computer today (a desktop; do you want "lshw" output or anything?) and at boot, here was the popup I've been discussing.  Today the popup mentions Pulse, but often it's related to HDMI or On-Board sound cards.  The 'missing' devices are different each time but they're really not removed at all.  (Due to my situation, the computer is not in active use right now so I didn't work to ensure this desktop's audio was functioning, let me know if you need me to do that).
Comment 10 Harald Sitter 2013-07-03 21:20:34 UTC
This can be any number of issues in any number of libraries. However since you are using PulseAudio  I believe an upcoming change should prevent this behavior.
Comment 11 Harald Sitter 2013-07-03 21:37:30 UTC
Git commit 9c061a16753e8801f157842107cdc19bd06c4533 by Harald Sitter.
Committed on 03/07/2013 at 21:32.
Pushed by sitter into branch 'master'.

Use Phonon::PulseSupport to prevent device detection with PulseAudio

Previously whenever a device changed phononserver would rescan the
devices and display a pointless window informing the user about the
device removal. This is no longer the desired default experience as
we now recommend PulseAudio which handles device mapping and caching
for us.

Ths is wrong for two reasons.
a) With PA scanning Alsa/OSS for devices is just wrong, because we are not
   going to use them anyway
b) The Phonon KCM with PA does not even visually present the Solid based
   device cache as PA overrides everything there.
So in short whatever the user did with the notificaton window it had no
impact on anything as the cache was not used anyway and updating the cache
was pointless for the very same reason.

Now phononserver will check on the fly whether PA is active and if so,
refuse to scan for devices. This however has the disadvantage that now
phononserver actually becomes a PA client getting continous (noop)
updates about device/stream changes as we repeatedly check activity
just in case PA explodes and we actually need to update the cache.

In the long run this ought to be a one time check though as PA
auto-restarts unless something went terribly wrong, for the time being
continous checks seem less invasive to the runtime experience.

M  +12   -3    phonon/kded-module/phononserver.cpp

http://commits.kde.org/kde-runtime/9c061a16753e8801f157842107cdc19bd06c4533
Comment 12 RussianNeuroMancer 2013-07-04 03:41:37 UTC
I doesn't sure, but maybe bug 266876 is also fixed with this commit?
Comment 13 Harald Sitter 2013-07-04 11:31:11 UTC
Well, no. The problem would be hidden as long as one is using PulseAudio, the bogus notifications will still come up when using plain ALSA however.
Comment 14 Harald Sitter 2013-07-06 11:33:10 UTC
*** Bug 322018 has been marked as a duplicate of this bug. ***