phonon/kded-module/phononserver.cpp
@@ -40,6 +40,7 @@
 #include <QtDBus/QDBusMessage>
 #include <QtDBus/QDBusMetaType>
 #include <QtCore/QVariant>
+#include <phonon/pulsesupport.h>
 #include <Solid/AudioInterface>
 #include <Solid/GenericInterface>
 #include <Solid/Device>
@@ -381,9 +382,17 @@ static void removeOssOnlyDevices(QList<PS::DeviceInfo> *list)
 
 void PhononServer::findDevices()
 {
-    KConfigGroup globalConfigGroup(m_config, "Globals");
-    //const int cacheVersion = globalConfigGroup.readEntry("CacheVersion", 0);
-    // cacheVersion 1 is KDE 4.1, 0 is KDE 4.0
+    if (Phonon::PulseSupport *pulse = Phonon::PulseSupport::getInstance()) {
+        // NOTE: This is relying on internal behavior....
+        //       enable internally simply sets a bool that is later && with the
+        //       actually PA activity.
+        //       Should this function ever start doing more, this will break horribly.
+        pulse->enable();
+        if (pulse->isActive()) {
+            kDebug(601) << "Not looking for devices as Phonon::PulseSupport is active.";
+            return;
+        }
+    }
 
     // Fetch the full list of audio and video devices from Solid
     const QList<Solid::Device> &solidAudioDevices =
